fix(deeisgn): bit better on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -208,6 +208,8 @@ h1 {
 .recommendation__title {
   font-weight: normal;
   color: var(--c-brand);
+  margin-top: 0.3em;
+  font-size: 1.4rem;
 }
 
 .recommendation__quote {
